--- a/client/style.css
+++ b/client/style.css
@@ -15,16 +15,19 @@ body {
 #main-container {
     display: inline-flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 canvas {
     border: 1px solid black;
     border-radius: 2px;
-
-    align-self: center;
 }
 #stats {
     font-family: monospace;
     margin: 10px;
     align-self: flex-start;
+}
+
+#reset-button {
+    padding: 0.2rem 1rem;
 }
